# mev-bot

./: .gitignore  .graph.txt  .newblockupdates.txt  .v3info.txt  Cargo.toml  README.md  addresses.txt  blacklist.txt  swap.txt
src/: bundler.rs  constants.rs  database.rs  database_writer.rs  lib.rs  main.rs  search.rs  simulation.rs  strategy.rs  trading_graph.rs  utils.rs
src/abi/: V2ArbBot.json  mod.rs
